<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="100">

    <RelativeLayout
        android:id="@+id/back_arrow_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10">

        <ImageButton
            android:id="@+id/toolbar_back_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_arrow_back_24" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/check_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/toolbar_check"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_check_24" />

    </RelativeLayout>

    <TextView
        android:id="@+id/note_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_weight="85"
        android:text="title of note"
        android:textColor="#000"
        android:textSize="23sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/note_edit_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_weight="85"
        android:background="#fff"
        android:padding="2dp"
        android:text="title of note"
        android:textColor="#000"
        android:textSize="23sp"
        android:visibility="gone" />


</LinearLayout>